updated recognition and experience

--- a/index.html
+++ b/index.html
@@ -2,87 +2,95 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <title>Nikhil Suresh Personal Portfolio</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-  <link rel="stylesheet" type="text/css" href="custom.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>    
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: rgb(27, 17, 17);
-      color: white;
-      padding: 3px;
-      bottom: 0px;
-      position:fixed;
-      bottom:0px;
-      width:100%;
-    }
-  </style>
+    <title>Nikhil Suresh Personal Portfolio</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: rgb(27, 17, 17);
+            color: white;
+            padding: 3px;
+            bottom: 0px;
+            position: fixed;
+            bottom: 0px;
+            width: 100%;
+        }
+    </style>
 </head>
+
 <body>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">About Me</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a href="#">Experience</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a href="#">Education</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a href="#">Recommendations</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-  
-<div class="container text-center">    
-  <div class="row">
-    <div class="col-sm-3 well">
-      <div class="well">
-        <img src="profilePicture.png" class="img-circle" height="225" width="225" alt="Avatar">
-        <p class = interests-text>
-            <a href="https://github.com/nik1097"><i class="fa fa-github fa_custom fa-2x"></i></a>&ensp;
-            <a href="https://www.linkedin.com/in/nikhil-suresh97/"><i class="fa fa-linkedin fa_custom fa-2x"></i></a>
-        </p>
-        <div class="interests-text">
-        <p><strong>Interests</strong></p>
-        </div>
-        <p>
-          <span class="label label-default">Software Development</span>
-          <span class="label label-primary">Cloud Computing</span>
-          <span class="label label-success">Micro Services</span>
-          <span class="label label-info">Machine Learning</span>
-          <span class="label label-danger">Python</span>
-        </p>
-      </div>
-    </div>
-    <div class="col-sm-7">
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="panel panel-default text-left">
-            <div class="panel-body">
-                <p class="intro">Hey, I'm <strong>Nikhil</strong> &#128075;</p>
-                <p>A Software Developer from Bengaluru, fixing and creating bugs to solve world problems. I'm currently working on developing the <a href="https://www.morningstar.com/products/direct/analytics-lab">AnalyticsLab</a> Platform at <a href="https://www.morningstar.com/">Morningstar, Inc.</a></p>
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">About Me</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="experience.html">Experience</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="experience.html">Education</a></li>
+                </ul>
+                <ul class="nav navbar-nav">
+                    <li><a href="recognition.html">Awards & Recommendations</a></li>
+                </ul>
             </div>
-          </div>
         </div>
-      </div>
+    </nav>
+
+    <div class="container text-center">
+        <div class="row">
+            <div class="col-sm-3 well">
+                <div class="well">
+                    <img src="profilePicture.png" class="img-circle" height="225" width="225" alt="Avatar">
+                    <p class=interests-text>
+                        <a href="https://github.com/nik1097"><i class="fa fa-github fa_custom fa-2x"></i></a>&ensp;
+                        <a href="https://www.linkedin.com/in/nikhil-suresh97/"><i
+                                class="fa fa-linkedin fa_custom fa-2x"></i></a>
+                    </p>
+                    <div class="interests-text">
+                        <p><strong>Interests</strong></p>
+                    </div>
+                    <p>
+                        <span class="label label-default">Software Development</span>
+                        <span class="label label-primary">Cloud Computing</span>
+                        <span class="label label-success">Micro Services</span>
+                        <span class="label label-info">Machine Learning</span>
+                        <span class="label label-danger">Python</span>
+                    </p>
+                </div>
+            </div>
+            <div class="col-sm-7">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <div class="panel panel-default text-left">
+                            <div class="panel-body">
+                                <p class="intro">Hey, I'm <strong>Nikhil</strong> &#128075;</p>
+                                <p>A Software Developer from Bengaluru, fixing and creating bugs to solve world
+                                    problems. I'm currently working on developing the <a
+                                        href="https://www.morningstar.com/products/direct/analytics-lab">AnalyticsLab</a>
+                                    Platform at <a href="https://www.morningstar.com/">Morningstar, Inc.</a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-</div>
-</div>
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
+    <footer class="container-fluid text-center">
+        <p>Footer Text</p>
+    </footer>
 
 </body>
+
 </html>
