updated recognition and experience

--- a/experience.html
+++ b/experience.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Nikhil Suresh Experience</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="custom.css">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>    
+  <style>
     /* Set black background color, white text and some padding */
     footer {
       background-color: rgb(27, 17, 17);
@@ -17,74 +19,96 @@
     }
   </style>
 </head>
-<body>
-    <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>John</p>
-           <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>Bo</p>
-           <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>Jane</p>
-           <img src="bandmember.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-3">
-          <div class="well">
-           <p>Anja</p>
-           <img src="bird.jpg" class="img-circle" height="55" width="55" alt="Avatar">
-          </div>
-        </div>
-        <div class="col-sm-9">
-          <div class="well">
-            <p>Just Forgot that I had to mention something about someone to someone about how I forgot something, but now I forgot it. Ahh, forget it! Or wait. I remember.... no I don't.</p>
-          </div>
-        </div>
-      </div>     
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li><a href="index.html">About Me</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="experience.html">Experience</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li><a href="experience.html">Education</a></li>
+      </ul>
+      <ul class="nav navbar-nav">
+        <li><a href="recognition.html">Awards & Recommendations</a></li>
+      </ul>
     </div>
-    <div class="col-sm-2 well">
-      <div class="thumbnail">
-        <p>Upcoming Events:</p>
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Fri. 27 November 2015</p>
-        <button class="btn btn-primary">Info</button>
-      </div>      
-      <div class="well">
-        <p>ADS</p>
+  </div>
+</nav>
+
+<body>
+  <div class="w3-container">
+    <h2 style="padding-top: 10px;">Experience</h2>
+    <hr>
+    <div class="row" style="padding-top: 10px;">
+      <div class="w3-card-4">
+        <header class="w3-container w3-light-grey">
+          <h3>Morningstar - Software Engineering Intern</h3>
+        </header>
+        <div class="w3-container">
+          <p>June 2022 - Present</p>
+          <p class="card-text"><strong> Python, JupyterLab, AWS, Jenkins, Containers, CloudBees, Bitbucket,
+              Jira</strong></p>
+          <p class="card-text"> Currently pursuing an extended internship as a SDE on optimizing Jupyter Lab for the
+            Docker containers to access Mornignstar data. Worked as a summer intern at Morningstar, Inc. Predominantly
+            worked on logging usage analytics data in AWS Cloudwatch. Extensively worked with Lambdas, S3, Postgres and
+            Docker containers to create pipeline for event logging and analysis. Also worked on creating Jupyter
+            Notebooks to visualize the Analytics. Monitored the health of jupyter pods in a Kubernetes cluster and
+            optimized cost usage and session logging.</p><br>
+        </div>
       </div>
-      <div class="well">
-        <p>ADS</p>
+    </div>
+    <div class="row" style="padding-top: 10px;">
+      <div class="w3-card-4">
+        <header class="w3-container w3-light-grey">
+          <h3>Clemson - Graduate Teaching Assistant</h3>
+        </header>
+        <div class="w3-container">
+          <p>Jan 2022 - Present</p>
+          <p class="card-text"><strong>AWS Solution Architect</strong></p>
+          <p class="card-text">Teaching a Graduate level course for AWS Solution Architect for more than 150 students.
+            The class covers all the topics required for the Associate Solution Architect certification.</p><br>
+        </div>
+      </div>
+    </div>
+    <div class="row" style="padding-top: 10px;">
+      <div class="w3-card-4">
+        <header class="w3-container w3-light-grey">
+          <h3>Accenture - Associate Software Engineer</h3>
+        </header>
+        <div class="w3-container">
+          <p>August 2019 - July 2021</p>
+          <p class="card-text"><strong>AWS, Python, Bitbucket, Qlikview, SQL, Webscraping, Machine Learning</strong></p>
+          <p class="card-text">Worked as a Data Analyst for a large pharmaceutical client. Work consisted of building
+            data pipelines and reports using Python, SQL Server, and Qlikview. Also, worked on several key automation
+            projects using Web scraping, Python, Machine Learning, and AWS Cloud Computing. Experienced in Version
+            Controlling systems such as Git & Bitbucket. One of the youngest recipients of the Accenture Excellence
+            award in the individual category. Further served as a Subject Matter Expert for boot camp on Python.</p><br>
+        </div>
+      </div>
+    </div>
+    <div class="row" style="padding-top: 10px;">
+      <div class="w3-card-4">
+        <header class="w3-container w3-light-grey">
+          <h3>Yokogawa - Intern Data Scientist</h3>
+        </header>
+        <div class="w3-container">
+          <p>August 2019 - July 2021</p>
+          <p class="card-text"><strong>Automation, Python, Data Handling, SQL, Tkinter, Machine Learning</strong></p>
+          <p class="card-text">Worked on building an end-to-end fully automated demand forecasting application for
+            transmitter manufacturing. Was a part of the pilot internship program in a 2 man team that laid the
+            foundation for further work on the application by multiple interns that followed. Was heavily involved
+            inter-department interaction for requirements elicitation and application testing. Four fold improvement in
+            accuracy and turnaround time for the transmitter department.</p><br>
+        </div>
       </div>
     </div>
   </div>
-</div>
+</body>
+<footer class="container-fluid text-center">
+  <p>Footer Text</p>
+</footer>
+
+</html>
