--- a/experience.html
+++ b/experience.html
@@ -2,113 +2,201 @@
 <html lang="en">
 
 <head>
-  <title>Nikhil Suresh Experience</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link rel="stylesheet" type="text/css" href="custom.css">
-  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  <style>
-    /* Set black background color, white text and some padding */
-    footer {
-      background-color: rgb(27, 17, 17);
-      color: white;
-      padding: 15px;
-    }
-  </style>
+    <title>Nikhil Suresh Experience</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="custom.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <style>
+        /* Set black background color, white text and some padding */
+        footer {
+            background-color: rgb(27, 17, 17);
+            color: white;
+            padding: 15px;
+        }
+    </style>
 </head>
 <nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li><a href="index.html">About Me</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="experience.html">Experience</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a href="experience.html">Education</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a href="recognition.html">Awards & Recommendations</a></li>
-      </ul>
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+                <li><a href="index.html">About Me</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="experience.html">Experience</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="education.html">Education</a></li>
+            </ul>
+            <ul class="nav navbar-nav">
+                <li><a href="recognition.html">Recognition</a></li>
+            </ul>
+        </div>
     </div>
-  </div>
 </nav>
 
 <body>
-  <div class="w3-container">
-    <h2 style="padding-top: 10px;">Experience</h2>
-    <hr>
-    <div class="row" style="padding-top: 10px;">
-      <div class="w3-card-4">
-        <header class="w3-container w3-light-grey">
-          <h3>Morningstar - Software Engineering Intern</h3>
-        </header>
-        <div class="w3-container">
-          <p>June 2022 - Present</p>
-          <p class="card-text"><strong> Python, JupyterLab, AWS, Jenkins, Containers, CloudBees, Bitbucket,
-              Jira</strong></p>
-          <p class="card-text"> Currently pursuing an extended internship as a SDE on optimizing Jupyter Lab for the
-            Docker containers to access Mornignstar data. Worked as a summer intern at Morningstar, Inc. Predominantly
-            worked on logging usage analytics data in AWS Cloudwatch. Extensively worked with Lambdas, S3, Postgres and
-            Docker containers to create pipeline for event logging and analysis. Also worked on creating Jupyter
-            Notebooks to visualize the Analytics. Monitored the health of jupyter pods in a Kubernetes cluster and
-            optimized cost usage and session logging.</p><br>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="padding-top: 10px;">
-      <div class="w3-card-4">
-        <header class="w3-container w3-light-grey">
-          <h3>Clemson - Graduate Teaching Assistant</h3>
-        </header>
-        <div class="w3-container">
-          <p>Jan 2022 - Present</p>
-          <p class="card-text"><strong>AWS Solution Architect</strong></p>
-          <p class="card-text">Teaching a Graduate level course for AWS Solution Architect for more than 150 students.
-            The class covers all the topics required for the Associate Solution Architect certification.</p><br>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="padding-top: 10px;">
-      <div class="w3-card-4">
-        <header class="w3-container w3-light-grey">
-          <h3>Accenture - Associate Software Engineer</h3>
-        </header>
-        <div class="w3-container">
-          <p>August 2019 - July 2021</p>
-          <p class="card-text"><strong>AWS, Python, Bitbucket, Qlikview, SQL, Webscraping, Machine Learning</strong></p>
-          <p class="card-text">Worked as a Data Analyst for a large pharmaceutical client. Work consisted of building
-            data pipelines and reports using Python, SQL Server, and Qlikview. Also, worked on several key automation
-            projects using Web scraping, Python, Machine Learning, and AWS Cloud Computing. Experienced in Version
-            Controlling systems such as Git & Bitbucket. One of the youngest recipients of the Accenture Excellence
-            award in the individual category. Further served as a Subject Matter Expert for boot camp on Python.</p><br>
-        </div>
-      </div>
-    </div>
-    <div class="row" style="padding-top: 10px;">
-      <div class="w3-card-4">
-        <header class="w3-container w3-light-grey">
-          <h3>Yokogawa - Intern Data Scientist</h3>
-        </header>
-        <div class="w3-container">
-          <p>August 2019 - July 2021</p>
-          <p class="card-text"><strong>Automation, Python, Data Handling, SQL, Tkinter, Machine Learning</strong></p>
-          <p class="card-text">Worked on building an end-to-end fully automated demand forecasting application for
-            transmitter manufacturing. Was a part of the pilot internship program in a 2 man team that laid the
-            foundation for further work on the application by multiple interns that followed. Was heavily involved
-            inter-department interaction for requirements elicitation and application testing. Four fold improvement in
-            accuracy and turnaround time for the transmitter department.</p><br>
-        </div>
-      </div>
-    </div>
-  </div>
-</body>
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
+    <div class="w3-container">
+        <h2 style="padding-top: 10px;">Experience</h2>
+        <hr>
+        <div class="row" style="padding-top: 10px;">
+            <div class="column">
+                <div class="w3-card-4">
+                    <header class="w3-container w3-light-grey">
+                        <h3><a href='https://www.morningstar.com/'>Morningstar</a> - Software Engineering Intern</h3>
+                    </header>
+                    <div class="w3-container">
+                        <p>June 2022 - Present</p>
+                        <p class="card-text"><strong>Python, JupyterLab, AWS, Jenkins, Containers, CloudBees, Bitbucket,
+                                Jira</strong></p>
+                        <p class="card-text"> Pursuing an extended internship as a SDE containerizing and optimizing
+                            Jupyter Lab for accessing Morninfstar data. Previously worked as a summer intern.
+                            Worked on logging and storing usage analytics data in AWS Cloudwatch, Lambdas, S3, and
+                            Postgres
+                            by creating pipelines and created notebooks for visualization of the data.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="w3-card-4">
+                    <div class="w3-container">
+                        <p class="card-text" style="padding-top: 50px;"><strong>Outcome and Learnings</strong></p>
+                        <p class="card-text">
+                        <ul>
+                            <li>Developing a new product by leveraging the concepts of Agile, Jenkins, OSS, Feature
+                                Management.
+                            </li>
+                            <li>Winner of the summer intern case study presentation for building a full stack
+                                application on investor bias.</li>
+                            <li>Created analytics to improve Kubernetes orchestration and costing, improved
+                                identification and termination of inactive pods by over 25%</li>
 
-</html>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 10px;">
+            <div class="column">
+                <div class="w3-card-4">
+                    <header class="w3-container w3-light-grey">
+                        <h3><a href="https://www.clemson.edu/">Clemson</a> - Graduate Teaching Assistant</h3>
+                    </header>
+                    <div class="w3-container">
+                        <p>Jan 2022 - Present</p>
+                        <p class="card-text"><strong>AWS Solution Architect</strong></p>
+                        <p class="card-text"> Teaching a Graduate level course for AWS Solution Architect for more than
+                            100 students.
+                            The class covers all the topics required for the Associate Solution Architect certification.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="w3-card-4">
+                    <div class="w3-container">
+                        <p class="card-text" style="padding-top: 50px;"><strong>Outcome and Learnings</strong></p>
+                        <p class="card-text">
+                        <ul>
+                            <li>Actively grade and conduct exams, hold office hours to assist students.
+                            </li>
+                            <li>Involved in building and review AWS Architectures built by students for projects</li>
+                            <li>Gained experience in formal academic teaching and communicating complex technical
+                                concepts for students</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 10px;">
+            <div class="column">
+                <div class="w3-card-4">
+                    <header class="w3-container w3-light-grey">
+                        <h3><a href="https://www.accenture.com/">Accenture</a> - Associate Software Engineer</h3>
+                    </header>
+                    <div class="w3-container">
+                        <p>August 2019 - July 2021</p>
+                        <p class="card-text"><strong>AWS, Python, Bitbucket, Qlikview, SQL, Webscraping, Machine
+                                Learning</strong>
+                        </p>
+                        <p class="card-text">Worked as a Data Analyst for a large pharmaceutical client. Work consisted
+                            of building
+                            data pipelines and reports using Python, SQL Server, and Qlikview. Also, worked on several
+                            key automation
+                            projects using Web scraping, Python, Machine Learning, and AWS Cloud Computing. Experienced
+                            in Version
+                            Controlling systems such as Git & Bitbucket. </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="w3-card-4">
+                    <div class="w3-container">
+                        <p class="card-text" style="padding-top: 50px;"><strong>Outcome and Learnings</strong></p>
+                        <p class="card-text">
+                        <ul>
+                            <li>One of the youngest recipients of the Accenture Celebrates Excellence award in the
+                                individual category.
+                            </li>
+                            <li>Led a Python bootcamp to train a team of colleagues in basic Data Analysis using Python
+                            </li>
+                            <li>Built an end to end automated ticket assignment system using ML. Savings of 800 manual
+                                hours/week and reduction in triaging team head count.
+                            </li>
+                            <li>Created pipelines for webscraping and collecting useful data for the client, imporved
+                                data
+                                collection and quality related to COVID data.</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row" style="padding-top: 10px;">
+            <div class="column">
+                <div class="w3-card-4">
+                    <header class="w3-container w3-light-grey">
+                        <h3><a href='https://www.yokogawa.com/'>Yokogawa</a> - Intern Data Scientist</h3>
+                    </header>
+                    <div class="w3-container">
+                        <p>January 2019 - July 2019</p>
+                        <p class="card-text"><strong>Automation, Python, Data Handling, SQL, Tkinter, Machine
+                                Learning</strong></p>
+                        <p class="card-text">Worked on building an end-to-end fully automated demand forecasting
+                            application for
+                            transmitter manufacturing. Was a part of the pilot internship program in a 2 man team that
+                            laid the
+                            foundation for further work on the application by multiple interns that followed.
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="column">
+                <div class="w3-card-4">
+                    <div class="w3-container">
+                        <p class="card-text" style="padding-top: 50px;"><strong>Outcome and Learnings</strong></p>
+                        <p class="card-text">
+                        <ul>
+                            <li>Inter-department interaction for requirements elicitation and application testing.
+                            </li>
+                            <li>Automation saved more than 600 manual hours/week. Eliminated human error in data
+                                collection</li>
+                            <li>Was nominated for impactful project award at Yokogawa Japan, during the internship
+                            </li>
+                            <li>Mentored interns occasionally for the next couple of years on the project</li>
+                        </ul>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="container-fluid text-center">
+        <p>Footer Text</p>
+    </footer>
+</body>
