--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -39,10 +37,10 @@
                     <li><a href="experience.html">Experience</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a href="experience.html">Education</a></li>
+                    <li><a href="education.html">Education</a></li>
                 </ul>
                 <ul class="nav navbar-nav">
-                    <li><a href="recognition.html">Awards & Recommendations</a></li>
+                    <li><a href="recognition.html">Recognition</a></li>
                 </ul>
             </div>
         </div>
@@ -79,7 +77,8 @@
                                 <p>A Software Developer from Bengaluru, fixing and creating bugs to solve world
                                     problems. I'm currently working on developing the <a
                                         href="https://www.morningstar.com/products/direct/analytics-lab">AnalyticsLab</a>
-                                    Platform at <a href="https://www.morningstar.com/">Morningstar, Inc.</a></p>
+                                    Platform at <a href="https://www.morningstar.com/">Morningstar, Inc. in Chicago</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -90,7 +89,6 @@
     <footer class="container-fluid text-center">
         <p>Footer Text</p>
     </footer>
-
 </body>
 
 </html>
