--- a/recognition.html
+++ b/recognition.html
@@ -32,7 +32,7 @@
                 <li><a href="education.html">Education</a></li>
             </ul>
             <ul class="nav navbar-nav">
-                <li class="active"><a href="recognition.html">Awards & Recognition</a></li>
+                <li class="active"><a href="recognition.html">Recognition</a></li>
             </ul>
         </div>
     </div>
@@ -71,7 +71,7 @@
                                 Nemani - Accenture</a></h3>
                     </header>
                     <div class="w3-container">
-                        <p class="card-text"><em> Directly Managed Nikhil</em></p>
+                        <p class="card-text"><em> Sr. Manager at Accenture</em></p>
                         <p class="card-text"> I’ve seen Nikhil go above and beyond in researching automation and
                             collaboration ideas with different applications during the two years tenuare we worked
                             together. Because of his ‘student for life’ mindset, he’s also eager to learn new
@@ -120,3 +120,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <footer class="container-fluid text-center">
+        <p>Footer Text</p>
+    </footer>
+</body>
