--- a/education.html
+++ b/education.html
@@ -90,7 +90,7 @@
                                 Algorithms, Computer Organisatio, Natural Language Processing</strong></p>
                         <p class="card-text">
                         <ul>
-                            <li><a href="https://github.com/nik1097/YokoProject">Demabd
+                            <li><a href="https://github.com/nik1097/YokoProject">Demand
                                     Forecasting of Transmitter Models using Python and Tkinter</a></li>
                             <li><a href="https://github.com/nik1097/COVID-19-Telegram-Bot">COVID-19 Telgram Bot</a></li>
                             <li><a href="https://github.com/nik1097/Moneyballing-FPL">Moneyballing-FPL</a></li>
