--- a/education.html
+++ b/education.html
@@ -87,9 +87,12 @@
                     </header>
                     <div class="w3-container">
                         <p class="card-text"><strong>Database Management, Operating Systems, Data Structures,
-                                Algorithms, Computer Organisatio, Natural Language Processing</strong></p>
+                                Algorithms, Computer Organisation, Natural Language Processing</strong></p>
                         <p class="card-text">
                         <ul>
+                            <li>First place in Final Engineering project in Transliteration of Sanskrit</li>
+                            <li>Award for Outstanding and Leadership U&I Trust mentoring and raising $211,817 in 60 days
+                            </li>
                             <li><a href="https://github.com/nik1097/YokoProject">Demand
                                     Forecasting of Transmitter Models using Python and Tkinter</a></li>
                             <li><a href="https://github.com/nik1097/COVID-19-Telegram-Bot">COVID-19 Telgram Bot</a></li>
@@ -105,6 +108,7 @@
     </div>
     </div>
     <footer class="container-fluid text-center">
-        <p>Footer Text</p>
+        <p><a href="https://github.com/nik1097/personalPortfolio/blob/main/LICENSE">Copyright (c) 2022 Nikhil Suresh</a></p>
     </footer>
 </body>
+</html>
