--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         </div>
     </div>
     <footer class="container-fluid text-center">
-        <p>Footer Text</p>
+        <p><a href="https://github.com/nik1097/personalPortfolio/blob/main/LICENSE">Copyright (c) 2022 Nikhil Suresh</a>
+        </p>
     </footer>
 </body>
 
