--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                     <p class=interests-text>
                         <a href="https://github.com/nik1097"><i class="fa fa-github fa_custom fa-2x"></i></a>&ensp;
                         <a href="https://www.linkedin.com/in/nikhil-suresh97/"><i
-                                class="fa fa-linkedin fa_custom fa-2x"></i></a>
+                                class="fa fa-linkedin fa_custom fa-2x"></i></a>&ensp;
+                        <a href="Nikhil Suresh Resume.pdf"><i class="fa fa-dropbox fa_custom fa-2x"></i></a>
                     </p>
                     <div class="interests-text">
                         <p><strong>Interests</strong></p>
