added option to scroll

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <a href="https://github.com/nik1097"><i class="fa fa-github fa_custom fa-2x"></i></a>&ensp;
                         <a href="https://www.linkedin.com/in/nikhil-suresh97/"><i
                                 class="fa fa-linkedin fa_custom fa-2x"></i></a>&ensp;
-                        <a href="Nikhil Suresh Resume.pdf"><i class="fa fa-dropbox fa_custom fa-2x"></i></a>
+                        <a href="Nikhil Suresh Resume.pdf"><i class="fa fa fa-file-text fa_custom fa-2x"></i></a>
                     </p>
                     <div class="interests-text">
                         <p><strong>Interests</strong></p>
@@ -78,7 +78,7 @@
                                 <p>A Software Developer from Bengaluru, fixing and creating bugs to solve world
                                     problems. I'm currently working on developing the <a
                                         href="https://www.morningstar.com/products/direct/analytics-lab">AnalyticsLab</a>
-                                    Platform at <a href="https://www.morningstar.com/">Morningstar, Inc. in Chicago</a>
+                                    Platform at <a href="https://www.morningstar.com/">Morningstar, Inc. in Chicago.</a>
                                 </p>
                             </div>
                         </div>
