--- a/recognition.html
+++ b/recognition.html
@@ -40,7 +40,7 @@
 
 <body>
     <div class="w3-container">
-        <h2 style="padding-top: 10px;">Recommendations</h2>
+        <h2 style="padding-top: 10px;">Recognition</h2>
         <hr>
         <div class="row" style="padding-top: 10px;">
             <div class="column">
